<resources>
    <string name="app_name">UT Projects</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="suffix_email">gmail.com</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="age">Age</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password too short</string>
    <string name="logout">Log out</string>
    <string name="empty_text">Field can\'t be empty</string>
    <string name="crash">Test Crash</string>
    <string name="login_error">Email and Password do not match</string>
</resources>